[gd_scene load_steps=2 format=3 uid="uid://djnj4g2g35ylo"]

[ext_resource type="Script" uid="uid://ce42cdw34mrhe" path="res://bomb_timer.gd" id="1_4fflx"]

[node name="BombTimer" type="Node2D"]
script = ExtResource("1_4fflx")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="BombProgressBar" type="ProgressBar" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -2.0
offset_right = 1155.0
offset_bottom = 27.0
grow_horizontal = 2
size_flags_horizontal = 3
show_percentage = false

[node name="TimeDisplay" type="Label" parent="."]
offset_left = -2.0
offset_top = 2.0
offset_right = 1157.0
offset_bottom = 27.0
horizontal_alignment = 1
vertical_alignment = 1
